Bug 1151225 - Wrap first line of commit message

--- a/webapp/app/css/treeherder.css
+++ b/webapp/app/css/treeherder.css
@@ -380,6 +380,17 @@ th-watched-repo {
     color: #777;
 }
 
+.commit-msg-wrap {
+  
+    display: inline-block;
+    max-width: 80%;
+    overflow: visible;
+    padding-left: 5px;
+    vertical-align: text-top;
+    white-space: normal;
+  
+ }
+
 .platform {
     font-size: 12px;
     padding-left: 0;
